@@ -1,5 +1,16 @@
 2011-09-02  Filip Pizlo  <fpizlo@apple.com>
 
+        DFG JIT speculation failure does recovery of additions in reverse and
+        doesn't rebox
+        https://bugs.webkit.org/show_bug.cgi?id=67551
+
+        Reviewed by Sam Weinig.
+
+        * dfg/DFGJITCompiler.cpp:
+        (JSC::DFG::JITCompiler::jumpFromSpeculativeToNonSpeculative):
+
+2011-09-02  Filip Pizlo  <fpizlo@apple.com>
+
         ValueProfile does not make it safe to introspect cell values
         after garbage collection
         https://bugs.webkit.org/show_bug.cgi?id=67354
